--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #0000ff;
     color: white;
     padding: 10px 20px;
 }
@@ -42,7 +42,7 @@ header nav ul li a:hover {
 }
 
 .hero {
-    background-color: #f4f4f9;
+    background-color: #0000ff;
     text-align: center;
     padding: 50px 20px;
 }
@@ -52,7 +52,7 @@ header nav ul li a:hover {
 }
 
 .cta-button {
-    background-color: #4CAF50;
+    background-color: #0000ff;
     color: white;
     padding: 10px 20px;
     text-decoration: none;
@@ -61,7 +61,7 @@ header nav ul li a:hover {
 }
 
 .cta-button:hover {
-    background-color: #45a049;
+    background-color: #0000ff;
 }
 
 .services, .gallery, .testimonials, .contact {
@@ -80,7 +80,7 @@ header nav ul li a:hover {
     background-color: #f4f4f9;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 5px rgb(252, 251, 251);
 }
 
 .gallery-images {
@@ -120,7 +120,7 @@ header nav ul li a:hover {
 }
 
 .contact form button {
-    background-color: #4CAF50;
+    background-color: #0000ff;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -128,7 +128,7 @@ header nav ul li a:hover {
 }
 
 footer {
-    background-color: #333;
+    background-color: white;
     color: white;
     text-align: center;
     padding: 20px 0;
